--- a/index.html
+++ b/index.html
@@ -1,5 +1,160 @@
-<html>
-<body>
-Done!!
-</body>
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class='no-js' lang='en'>
+	<!--<![endif]-->
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+		<title>Detkch | Survey Questionnaire Platform</title>
+		<meta name="description"
+			content="Detkch | Survey Questionnaire Platform">
+		<meta property="og:title" content="Detkch | Survey Questionnaire Platform" />
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content="Detkch | Survey Questionnaire Platform" />
+		<!-- Favicon and touch icons -->
+		<link rel="shortcut icon" href="favicon.png" />
+		<link rel="apple-touch-icon" href="favicon.png" />
+
+		<link rel="stylesheet" href="css/maximage.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" charset="utf-8" />
+
+		<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
+		<!--[if IE 6]>
+			<style type="text/css" media="screen">
+				.gradient {display:none;}
+			</style>
+		<![endif]-->
+	</head>
+	<body>
+
+		<!-- Social Links -->
+		<nav class="social-nav">
+			<ul>
+				<li><a href="#"><img src="images/icon-facebook.png" /></a></li>
+				<li><a href="#"><img src="images/icon-twitter.png" /></a></li>
+				<li><a href="#"><img src="images/icon-google.png" /></a></li>
+				<li><a href="#"><img src="images/icon-dribbble.png" /></a></li>
+				<li><a href="#"><img src="images/icon-linkedin.png" /></a></li>
+				<li><a href="#"><img src="images/icon-pinterest.png" /></a></li>
+			</ul>
+		</nav>
+
+		<!-- Switch to full screen -->
+		<button class="full-screen" onclick="$(document).toggleFullScreen()"></button>
+
+		<!-- Site Logo -->
+		<div id="logo"><img src="favicon.png" width="100px" height="100px" /></div>
+
+		<!-- Main Navigation -->
+		<nav class="main-nav">
+			<ul>
+				<li><a href="#home" class="active">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+
+		<!-- Slider Controls -->
+		<a href="" id="arrow_left"><img src="images/arrow-left.png" alt="Slide Left" /></a>
+		<a href="" id="arrow_right"><img src="images/arrow-right.png" alt="Slide Right" /></a>
+
+		<!-- Home Page -->
+		<section class="content show" id="home">
+			<h1>Detkch</h1>
+			<h5>Welcome</h5>
+			<p>Survey Questionnaire Platform</p>
+		</section>
+
+		<!-- About Page -->
+		<section class="content hide" id="about">
+			<h1>About</h1>
+			<h5>Here's a little about what we're up to.</h5>
+			<p>We prepared a platform for survey questionnaire and you can learn how to use these services in only several minutes.</p>
+		</section>
+
+		<!-- Contact Page -->
+		<section class="content hide" id="contact">
+			<h1>Contact</h1>
+			<h5>Get in touch.</h5>
+			<p>Email: <a href="#">sechsfather@detkch.com</a><br />
+		</section>
+
+		<!-- Background Slides -->
+		<div id="maximage">
+			<div>
+				<!-- <img src="images/backgrounds/bg-img-1.jpg" alt="" /> -->
+				<img src="https://source.unsplash.com/random/#1" alt="" />
+				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+			</div>
+			<div>
+				<!-- <img src="images/backgrounds/bg-img-2.jpg" alt="" /> -->
+				<img src="https://source.unsplash.com/random/#2" alt="" />
+				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+			</div>
+			<div>
+				<!-- <img src="images/backgrounds/bg-img-3.jpg" alt="" /> -->
+				<img src="https://source.unsplash.com/random/#3" alt="" />
+				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+			</div>
+			<div>
+				<!-- <img src="images/backgrounds/bg-img-4.jpg" alt="" /> -->
+				<img src="https://source.unsplash.com/random/#4" alt="" />
+				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+			</div>
+			<div>
+				<!-- <img src="images/backgrounds/bg-img-5.jpg" alt="" /> -->
+				<img src="https://source.unsplash.com/random/#5" alt="" />
+				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+			</div>
+		</div>
+
+		<!-- <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script> -->
+		<script src='js/jquery/jquery-1.8.3.js'></script>
+		<script src="js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/jquery.fullscreen.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/jquery.ba-hashchange.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
+
+		<script type="text/javascript" charset="utf-8">
+			$(function(){
+				$('#maximage').maximage({
+					cycleOptions: {
+						fx: 'fade',
+						speed: 1000, // Has to match the speed for CSS transitions in jQuery.maximage.css (lines 30 - 33)
+						timeout: 5000,
+						prev: '#arrow_left',
+						next: '#arrow_right',
+						pause: 0,
+						before: function(last,current){
+							if(!$.browser.msie){
+								// Start HTML5 video when you arrive
+								if($(current).find('video').length > 0) $(current).find('video')[0].play();
+							}
+						},
+						after: function(last,current){
+							if(!$.browser.msie){
+								// Pauses HTML5 video when you leave it
+								if($(last).find('video').length > 0) $(last).find('video')[0].pause();
+							}
+						}
+					},
+					onFirstImageLoaded: function(){
+						jQuery('#cycle-loader').hide();
+						jQuery('#maximage').fadeIn('fast');
+					}
+				});
+
+				// Helper function to Fill and Center the HTML5 Video
+				jQuery('video,object').maximage('maxcover');
+
+			});
+		</script>
+  </body>
 </html>
