--- a/fixapisurvey.html
+++ b/fixapisurvey.html
@@ -63,7 +63,7 @@ v.1.0 - James Beswick (@jbesw) - contact me with any questions!
               </div>
 
               <fieldset class="mb-3">
-                <legend class="col-form-label pt-0">LMAX</legend>
+                <legend class="col-form-label pt-0" style="padding:5px;background:#000;color:#88fcff;font-size:20px;font-weight:900">LMAX</legend>
                 <small id="lp1Help" class="form-text text-muted">Likely to trade via LMAX?</small>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="lp1" id="lp1Yes" value="Yes">
@@ -73,11 +73,11 @@ v.1.0 - James Beswick (@jbesw) - contact me with any questions!
                   <input class="form-check-input" type="radio" name="lp1" id="lp1No" value="No">
                   <label class="form-check-label" for="lp1No">No</label>
                 </div>
-                <input type="number" class="form-control" id="lp1Val" name="lp1Val" placeholder="Maximum Acceptable Initial Funding">
+                <input type="number" class="form-control" id="lp1Val" name="lp1Val" placeholder="Maximum Acceptable Initial Funding (LMAX)">
               </fieldset>
 
               <fieldset class="mb-3">
-                <legend class="col-form-label pt-0">Interactive Brokers</legend>
+                <legend class="col-form-label pt-0" style="padding:5px;background:#000;color:#88fcff;font-size:20px;font-weight:900">Interactive Brokers</legend>
                 <small id="lp2Help" class="form-text text-muted">Likely to trade via Interactive Brokers?</small>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="lp2" id="lp2Yes" value="Yes">
@@ -87,11 +87,11 @@ v.1.0 - James Beswick (@jbesw) - contact me with any questions!
                   <input class="form-check-input" type="radio" name="lp2" id="lp2No" value="No">
                   <label class="form-check-label" for="lp1No">No</label>
                 </div>
-                <input type="number" class="form-control" id="lp2Val" name="lp2Val" placeholder="Maximum Acceptable Initial Funding">
+                <input type="number" class="form-control" id="lp2Val" name="lp2Val" placeholder="Maximum Acceptable Initial Funding (Interactive Brokers)">
               </fieldset>
 
               <fieldset class="mb-3">
-                <legend class="col-form-label pt-0">Swissquote</legend>
+                <legend class="col-form-label pt-0" style="padding:5px;background:#000;color:#88fcff;font-size:20px;font-weight:900">Swissquote</legend>
                 <small id="lp3Help" class="form-text text-muted">Likely to trade via Swissquote?</small>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="lp3" id="lp3Yes" value="Yes">
@@ -101,11 +101,11 @@ v.1.0 - James Beswick (@jbesw) - contact me with any questions!
                   <input class="form-check-input" type="radio" name="lp3" id="lp3No" value="No">
                   <label class="form-check-label" for="lp3No">No</label>
                 </div>
-                <input type="number" class="form-control" id="lp3Val" name="lp3Val" placeholder="Maximum Acceptable Initial Funding">
+                <input type="number" class="form-control" id="lp3Val" name="lp3Val" placeholder="Maximum Acceptable Initial Funding (Swissquote)">
               </fieldset>
 
               <fieldset class="mb-3">
-                <legend class="col-form-label pt-0">ATC Brokers</legend>
+                <legend class="col-form-label pt-0" style="padding:5px;background:#000;color:#88fcff;font-size:20px;font-weight:900">ATC Brokers</legend>
                 <small id="lp4Help" class="form-text text-muted">Likely to trade via ATC Brokers?</small>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="lp4" id="lp4Yes" value="Yes">
@@ -115,11 +115,11 @@ v.1.0 - James Beswick (@jbesw) - contact me with any questions!
                   <input class="form-check-input" type="radio" name="lp4" id="lp4No" value="No">
                   <label class="form-check-label" for="lp4No">No</label>
                 </div>
-                <input type="number" class="form-control" id="lp4Val" name="lp4Val" placeholder="Maximum Acceptable Initial Funding">
+                <input type="number" class="form-control" id="lp4Val" name="lp4Val" placeholder="Maximum Acceptable Initial Funding (ATC Brokers)">
               </fieldset>
 
               <fieldset class="mb-3">
-                <legend class="col-form-label pt-0">LegacyFX</legend>
+                <legend class="col-form-label pt-0" style="padding:5px;background:#000;color:#88fcff;font-size:20px;font-weight:900">LegacyFX</legend>
                 <small id="lp5Help" class="form-text text-muted">Likely to trade via LegacyFX?</small>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="lp5" id="lp5Yes" value="Yes">
@@ -129,11 +129,11 @@ v.1.0 - James Beswick (@jbesw) - contact me with any questions!
                   <input class="form-check-input" type="radio" name="lp5" id="lp5No" value="No">
                   <label class="form-check-label" for="lp5No">No</label>
                 </div>
-                <input type="number" class="form-control" id="lp5Val" name="lp5Val" placeholder="Maximum Acceptable Initial Funding">
+                <input type="number" class="form-control" id="lp5Val" name="lp5Val" placeholder="Maximum Acceptable Initial Funding (LegacyFX)">
               </fieldset>
 
               <fieldset class="mb-3">
-                <legend class="col-form-label pt-0">Varianse</legend>
+                <legend class="col-form-label pt-0" style="padding:5px;background:#000;color:#88fcff;font-size:20px;font-weight:900">Varianse</legend>
                 <small id="lp6Help" class="form-text text-muted">Likely to trade via Varianse?</small>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="lp6" id="lp6Yes" value="Yes">
@@ -143,7 +143,7 @@ v.1.0 - James Beswick (@jbesw) - contact me with any questions!
                   <input class="form-check-input" type="radio" name="lp6" id="lp6No" value="No">
                   <label class="form-check-label" for="lp6No">No</label>
                 </div>
-                <input type="number" class="form-control" id="lp6Val" name="lp6Val" placeholder="Maximum Acceptable Initial Funding">
+                <input type="number" class="form-control" id="lp6Val" name="lp6Val" placeholder="Maximum Acceptable Initial Funding (Varianse)">
               </fieldset>
 
               <h4 id="response"></h4>
