--- a/fixapisurvey.html
+++ b/fixapisurvey.html
@@ -22,6 +22,9 @@ v.1.0 - James Beswick (@jbesw) - contact me with any questions!
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <title>Trade via FIX API with lower initial capital | Detkch Survey</title>
+    <meta name="description"
+			content="Do you want to trade via FIX API with lower initial capital? | Detkch Survey">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="favicon.png" />
 
