--- a/index.html
+++ b/index.html
@@ -101,16 +101,14 @@
 				<img src="https://source.unsplash.com/random/#3" alt="" />
 				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 			</div>
-			<div>
-				<!-- <img src="images/backgrounds/bg-img-4.jpg" alt="" /> -->
-				<img src="https://source.unsplash.com/random/#4" alt="" />
+			<!-- <div>
+				<img src="images/backgrounds/bg-img-4.jpg" alt="" />
 				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 			</div>
 			<div>
-				<!-- <img src="images/backgrounds/bg-img-5.jpg" alt="" /> -->
-				<img src="https://source.unsplash.com/random/#5" alt="" />
+				<img src="images/backgrounds/bg-img-5.jpg" alt="" />
 				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
+			</div> -->
 		</div>
 
 		<!-- <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script> -->
